--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
 /* intuitivnější box-sizing pro všechny prvky na stránce */
-html { box-sizing: border-box; }
-*, ::before, ::after { box-sizing: inherit; }
-
+html {
+  box-sizing: border-box;
+}
+*,
+::before,
+::after {
+  box-sizing: inherit;
+}
 
 /*
 	Poznámky:
@@ -28,42 +33,104 @@ html { box-sizing: border-box; }
 	#303339		tmavé pozadí patičky
 */
 
-
 body {
-	margin: 0;
-	font-family: 'Lora', serif;
-	font-size: 18px;
-	line-height: 1.5;
-	
+  margin: 0;
+  font-family: "Lora", serif;
+  font-size: 18px;
+  line-height: 1.5;
 }
 
-.logo {width: 170px;
-margin: 30px 0 30px 0}
+.logo {
+  width: 170px;
+  margin: 30px 0 30px 0;
+}
 
-.header {display: flex; 
-justify-content: space-between;
-align-items: center;
-padding: 30px}
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px;
+  width: 1100px;
+  margin: auto;
+}
 
-.menu {display: flex;
-list-style: none;}
+.menu {
+  display: flex;
+  list-style: none;
+}
 
-.menu a {text-decoration: none;
-color: black;
-padding: 10px 15px;}
+.menu a {
+  text-decoration: none;
+  color: black;
+  padding: 10px 15px;
+}
 
-.hero {background-image: url(images/cupcake.jpg);
-background-repeat: no-repeat;
-background-size: cover;
-background-position: center;
+.menu li :hover {background-color: #f195b2;
+border-radius: 30px;}
+
+.hero {
+  background-image: url(images/cupcake.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  color: white;
+  padding: 80px;
+}
+
+.hero p {
+  font-size: 24px;
+  font-style: italic;
+  padding-right: 40%;
+}
+
+.hero h1 {
+  font-size: 52px;
+  font-family: "Playfair Display", serif;
+  padding-right: 40%;
+}
+
+.hero-text {
+  width: 1100px;
+  margin: auto;
+}
+
+.welcome {
+  display: flex;
+  width: 1100px;
+  margin: auto;
+  padding: 80px 0 80px 0;
+}
+
+.cukrarka {border-radius: 5px;}
+
+h2 {
+  font-size: 36px;
+  font-family: "Playfair Display", serif;
+}
+.welcome-left {
+  padding-right: 30px;
+}
+
+.button-vyrobky {
+  display: inline-block;
+  padding: 15px 40px;
+  background-color: #f195b2;
+  text-decoration: none;
+  border-radius: 30px;
+  color: white;
+}
+
+.button-vyrobky:hover {background-color: #d2567d}
+
+.offer {
+background-color: #f0f0f0;
+padding: 80px 0 80px 0;
+
+}
+
+
+
+footer {background-color: #303339 ; 
 color: white;
-padding:80px
-
-}
-
-.hero p {font-size: 24px; 
-font-style: italic; 
-padding-right: 40%;}
-
-.hero h1 {font-size: 52px;
-padding-right: 40%;}
+padding: 30px;
+text-align: center;}
