--- a/style.css
+++ b/style.css
@@ -38,7 +38,10 @@ body {
   font-family: "Lora", serif;
   font-size: 18px;
   line-height: 1.5;
+  color: #242424;
 }
+
+/*header*/
 
 .logo {
   width: 170px;
@@ -50,7 +53,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 30px;
-  width: 1100px;
+  max-width: 1100px;
   margin: auto;
 }
 
@@ -61,12 +64,16 @@ body {
 
 .menu a {
   text-decoration: none;
-  color: black;
   padding: 10px 15px;
+  color: #242424
 }
 
 .menu li :hover {background-color: #f195b2;
-border-radius: 30px;}
+border-radius: 30px;
+}
+
+
+/*hero sekce*/
 
 .hero {
   background-image: url(images/cupcake.jpg);
@@ -80,25 +87,27 @@ border-radius: 30px;}
 .hero p {
   font-size: 24px;
   font-style: italic;
-  padding-right: 40%;
 }
 
 .hero h1 {
   font-size: 52px;
   font-family: "Playfair Display", serif;
-  padding-right: 40%;
 }
 
 .hero-text {
-  width: 1100px;
+  max-width: 1100px;
   margin: auto;
+  padding-right: 40%;
 }
+
+/*Vitejte v nasi cukrarne*/
 
 .welcome {
   display: flex;
-  width: 1100px;
+  max-width: 1100px;
   margin: auto;
   padding: 80px 0 80px 0;
+ 
 }
 
 .cukrarka {border-radius: 5px;}
@@ -106,8 +115,13 @@ border-radius: 30px;}
 h2 {
   font-size: 36px;
   font-family: "Playfair Display", serif;
+  color: #3e606b
 }
+
+.welcome-right {flex: 1 0 50%;}
+
 .welcome-left {
+  flex: 1 0 50%;
   padding-right: 30px;
 }
 
@@ -118,16 +132,70 @@ h2 {
   text-decoration: none;
   border-radius: 30px;
   color: white;
+  margin-top: 10px;
 }
 
 .button-vyrobky:hover {background-color: #d2567d}
 
+
+/*dnesni nabidka*/
+
+.background-offer{background-color: #f0f0f0;}
+
 .offer {
-background-color: #f0f0f0;
 padding: 80px 0 80px 0;
+margin: auto;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+max-width: 1100px;
 
 }
 
+.offer-text {
+max-width: 1100px;
+flex: 1 0 100%}
+
+.cakes {max-width: 1100px;
+flex: 1 0 100%;
+display: flex;
+flex: 1 0 20%;
+justify-content: space-between;
+}
+
+.cake {margin-right: 30px;
+background-color: white;
+border-radius: 5px;
+box-shadow: 1px 1px 15px grey;}
+
+.cake4 {margin-right: 0;}
+
+.cakes img {max-width: 100%;
+border-radius: 5px 5px 0 0 ;}
+
+.cake h3,
+.cake p {text-align: center;
+padding: 20px;}
+
+
+/*pristup k peceni sekce */
+
+.our-baking {
+  max-width: 1100px;
+  display: flex;
+  margin: auto;
+  padding: 80px 0 80px 0;
+  align-items: center;
+}
+
+.baking-right {
+  flex: 1 0 50%;
+  padding-left: 30px;
+}
+
+.baking-left {flex: 1 0 50%;}
+
+.baking-left img {border-radius: 5px;}
 
 
 footer {background-color: #303339 ; 
