--- a/style.css
+++ b/style.css
@@ -110,7 +110,8 @@ border-radius: 30px;
  
 }
 
-.cukrarka {border-radius: 5px;}
+.cukrarka {border-radius: 5px;
+}
 
 h2 {
   font-size: 36px;
@@ -118,12 +119,15 @@ h2 {
   color: #3e606b
 }
 
-.welcome-right {flex: 1 0 50%;}
+div .welcome {flex: 0 0 calc((100% - 30px) / 2 );}
+
+/*.welcome-right {flex: 1 0 50%;}
 
 .welcome-left {
   flex: 1 0 50%;
-  padding-right: 30px;
 }
+
+*/
 
 .button-vyrobky {
   display: inline-block;
@@ -156,11 +160,20 @@ max-width: 1100px;
 max-width: 1100px;
 flex: 1 0 100%}
 
+/*
 .cakes {max-width: 1100px;
 flex: 1 0 100%;
 display: flex;
 flex: 1 0 20%;
 justify-content: space-between;
+}
+*/
+
+.cakes {max-width: 1100px;
+  flex: 1 0 100%;
+  display: flex;
+  flex: 0 0 calc((100% - 90px)/4);
+  justify-content: space-between;
 }
 
 .cake {margin-right: 30px;
@@ -185,18 +198,20 @@ padding: 20px;}
   display: flex;
   margin: auto;
   padding: 80px 0 80px 0;
-  align-items: center;
 }
 
-.baking-right {
-  flex: 1 0 50%;
-  padding-left: 30px;
-}
+.baking-right {flex: 1 1 50%;
+margin-left: 30px;}
 
 .baking-left {flex: 1 0 50%;}
 
-.baking-left img {border-radius: 5px;}
 
+.our-baking img {border-radius: 5px;
+}
+
+
+
+/*footer*/
 
 footer {background-color: #303339 ; 
 color: white;
